unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template_Component__mdt/EventApi__Lightning_Event_Page_Template_Component__mdt.object-meta.xml
<CustomObject>
    <description>Mapping of Lightning Event Component to Lightning Event Page Template.</description>
    <label>Lightning Event Page Template Component</label>
    <pluralLabel>Lightning Event Page Template Components</pluralLabel>
</CustomObject>