unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template_Component__mdt/fields/EventApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, this record will become enabled as a template.</description>
    <inlineHelpText>When checked, this record will become enabled as a template.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>