unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template_Component__mdt/fields/EventApi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated - please use Is_Active__c</description>
    <inlineHelpText>When checked, this record will become enabled as a template.</inlineHelpText>
    <label>Is Enabled (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>