unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template_Component__mdt/fields/EventApi__Lightning_Event_Page_Template__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Lightning_Event_Page_Template__c</fullName>
    <description>** REQUIRED ** Linked to the related event page.</description>
    <inlineHelpText>** REQUIRED ** Linked to the related event page.</inlineHelpText>
    <label>Lightning Event Page Template</label>
    <referenceTo>EventApi__Lightning_Event_Page_Template__mdt</referenceTo>
    <relationshipLabel>Lightning Event Page Template Components</relationshipLabel>
    <relationshipName>Lightning_Event_Page_Template_Components</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>