unpackaged/main/default/objects/EventApi__Lightning_Event_Page_Template_Component__mdt/fields/EventApi__Order__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Order__c</fullName>
    <description>** REQUIRED ** Display order of Lightning components on a page.</description>
    <inlineHelpText>** REQUIRED ** Display order of Lightning components on a page.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>